apps/ab-testing/destinationrule-mysupply.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: comvita-mysupply
spec:
  host: comvita-mysupply.default.svc.cluster.local
  # subsets:
  # - name: v1        # 2
  #   labels:
  #     version: v1   # 3
  # - name: v2
  #   labels:
  #     version: v2 
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: version   # 1
